# scratch

action/src/: main.rs
con/naive_hashmap/: Cargo.toml
con/naive_hashmap/src/: lib.rs
hex/: .gitignore  Cargo.toml  README.md
hex/src/: main.rs
macros/: README.md
macros/add/: README.md
macros/add/src/: main.rs
parcom/: Cargo.toml  README.md
parcom/src/: lib.rs
rayon/: Cargo.toml
