[package]
name = "hex"
description = "Custom SVG avatar from string"
version = "0.1.0"
authors = ["gaoler <gaoler@electronicpanopticon.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.5", features = ["cargo", "derive", "unicode"] }
data-encoding = "2.3.2"
hex-literal = "0.3.4"
sha-1 = "0.10.0"
svg = "0.10.0"
